New post input form being added

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
 
 @theme {
   --color-twitterDarkBackgroud: #010000;
+  --color-twitterTweetHoverBackground: #080809;
   --color-twitterOutliner: #2f3336;
   --color-twitterText: #e7e8ea;
   --color-twitterDarkFont: #606468;
